<resources>
    <string name="app_name">RivChat</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>

    <string name="hint_username">Enter a new username</string>
    <string name="hint_email_reset">Enter your email</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="signin">SignIn</string>
    <string name="emailpassword">EmailPassword</string>
    <string name="password">Password</string>
    <string name="bSendAuth">Signin</string>
    <string name="bRegiEmail">Signup</string>

    <!-- FACEBOOK AUTH -->
    <string name="facebook_app_id">165480140251094</string>
    <string name="fb_login_protocol_scheme">fb165480140251094</string>
    <!-- END FACEBOOK AUTH -->
</resources>
